[metadata]
name = RegionCompare
version = 0.1.0
description = Compare regions in various file formats
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
url = https://github.com/ReddyLab/CRADLE
author = Thomas Cowart
author_email = tncowart@protonmail.com

[options]
packages =
    RegionCompare
    RegionCompare.ChromoRegions
package_dir =
    RegionCompare=RegionCompare
zip_safe = False
scripts = bin/regioncompare
install_requires =
    pyBigWig >= 0.3.11
    h5py >= 2.6.0
